fix: name label z-index

--- a/src/components/Mouse/index.module.scss
+++ b/src/components/Mouse/index.module.scss
@@ -40,7 +40,6 @@
     transition: opacity 0.3s ease-in-out;
     user-select: none;
     opacity: 0;
-    z-index: 1;
   }
 
   &:hover::after {
